--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,5 +46,8 @@ jobs:
       - name: Generate Application Key
         run: php artisan key:generate
 
+      - name: Migrate Database
+        run: php artisan migrate --no-interaction --force
+
       - name: Tests
         run: ./vendor/bin/pest
