--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,21 @@ jobs:
   ci:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:17
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: devaja
+          POSTGRES_PASSWORD: 1q2w3e4r
+          POSTGRES_DB: homfine-laravel-dev
+        options: >-
+          --health-cmd="pg_isready -U devaja -d homfine-laravel-dev"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -34,7 +49,7 @@ jobs:
       - name: Install Node Dependencies
         run: npm ci
 
-      - name: Install Dependencies
+      - name: Install PHP Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
       - name: Build Assets
@@ -43,11 +58,20 @@ jobs:
       - name: Copy Environment File
         run: cp .env.example .env
 
+      - name: Configure DB in .env
+        run: |
+          sed -i 's/DB_CONNECTION=.*/DB_CONNECTION=pgsql/' .env
+          sed -i 's/DB_HOST=.*/DB_HOST=127.0.0.1/' .env
+          sed -i 's/DB_PORT=.*/DB_PORT=5432/' .env
+          sed -i 's/DB_DATABASE=.*/DB_DATABASE=homfine-laravel-dev/' .env
+          sed -i 's/DB_USERNAME=.*/DB_USERNAME=devaja/' .env
+          sed -i 's/DB_PASSWORD=.*/DB_PASSWORD=1q2w3e4r/' .env
+
       - name: Generate Application Key
         run: php artisan key:generate
 
-      - name: Migrate Database
+      - name: Run Migrations
         run: php artisan migrate --no-interaction --force
 
-      - name: Tests
+      - name: Run Tests
         run: ./vendor/bin/pest
