--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -57,12 +57,22 @@ jobs:
       - name: Clear config cache
         run: php artisan config:clear
 
+      - name: Install PostgreSQL client
+        run: sudo apt-get install -y postgresql-client
+
       - name: Wait for Postgres
         run: |
+          echo "Waiting for Postgres to be ready..."
           until pg_isready -h postgres -p 5432 -U devaja; do
-            echo "Waiting for postgres..."
+            echo "Postgres is unavailable - sleeping"
             sleep 2
           done
+          echo "Postgres is up!"
+
+      - name: Debug Postgres connection
+        run: |
+          echo "Testing connection to postgres service..."
+          PGPASSWORD=1q2w3e4r psql -h postgres -U devaja -d homfine-laravel-dev -c "SELECT version();"
 
       - name: Run migrations
         run: php artisan migrate --force
